// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`title render custom class 1`] = `

<div>
  <h3 class="text-2xl font-semibold leading-none tracking-tight custom-class">
  </h3>
</div>

`;

exports[`title render default 1`] = `

<div>
  <h3 class="text-2xl font-semibold leading-none tracking-tight">
  </h3>
</div>

`;
